# jenkins-agent

./: .coverage  .env.template  .env.test  .pre-commit-config.yaml  Dockerfile  LICENSE  PR.md  README.md  docker-compose.test.yml  docker-compose.yml  github_ssh_setup.sh  pyproject.toml  pytest.ini  requirements.txt  roadmap.md  setup-jenkins-enhanced.sh  setup-jenkins.sh  setup_cron_git_update.sh  setup_github_cron_clone.sh
.github/workflows/: jenkins-agent.yml
docker/agent/: Dockerfile
docker/github-sync/: Dockerfile  entrypoint.sh  sync.py
docker/jenkins/: Dockerfile  jenkins-support  jenkins.sh  plugins.txt
docker/jenkins/init.groovy.d/: 01-basic-security.groovy
docker/monitor/: Dockerfile
docker/monitoring/: Dockerfile  entrypoint.sh  exporter.py
docker/monitoring/config/: prometheus.yml
docker/notifier/: Dockerfile
docker/web/: Dockerfile  nginx.conf  start.sh
docker/web/frontend/: package.json
docker/webhook/: Dockerfile
docs/: enhanced-setup.md
docs/wiki/: API-Reference.md  Agents.md  Architecture.md  Backend-Development.md  Configuration.md  Deployment-Guide.md  Development-Guide.md  Frontend-Development.md  Getting-Started.md  Home.md
k8s/base/: agents.yaml  configmap.yaml  github-sync.yaml  jenkins.yaml  kustomization.yaml  mongodb.yaml  monitoring.yaml  namespace.yaml  redis.yaml  secret.yaml  web.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
langchain_jenkins/: main.py
langchain_jenkins/agents/: base_agent.py  build_manager.py  enhanced_build_manager.py  enhanced_log_analyzer.py  enhanced_pipeline_manager.py  enhanced_plugin_manager.py  log_analyzer.py  pipeline_manager.py  plugin_manager.py  supervisor.py  user_manager.py  workflow_manager.py
langchain_jenkins/ai/: build_predictor.py  log_analyzer.py
langchain_jenkins/cli/: interactive.py  jenkins_cli.py
langchain_jenkins/config/: config.py
langchain_jenkins/db/: mongo_client.py
langchain_jenkins/discord/: bot.py
langchain_jenkins/docs/: implementation_plan.md  monitoring.md  phase2_implementation.md  phase3_implementation.md  phase4_implementation.md  phase5_implementation.md  phase6_frontend.md  phase6_implementation.md  roadmap_analysis.md
langchain_jenkins/tools/: jenkins_api.py  log_analysis.py  pipeline_generator.py  pipeline_security.py  pipeline_tools.py  plugin_tools.py  user_tools.py
langchain_jenkins/utils/: cache.py  embeddings.py  error_handler.py  errors.py  github.py  llm.py  metrics.py  monitoring.py  rate_limit.py  webhook.py
langchain_jenkins/web/: app.py
langchain_jenkins/web/frontend/: package.json
langchain_jenkins/webhooks/: github_handler.py  listener.py  notifier.py  webhook.py
scripts/: build-and-deploy.sh  run_tests.sh  setup.sh
tests/: conftest.py
tests/agents/: test_agent_functionality.py
tests/api/: test_endpoints.py
tests/integration/: test_agents.py  test_api.py  test_jenkins_api.py  test_llm.py  test_workflow.py
tests/llm/: test_llm_integration.py
tests/unit/: test_build_predictor.py  test_cache.py  test_enhanced_build_manager.py  test_enhanced_log_analyzer.py  test_enhanced_pipeline_manager.py  test_enhanced_plugin_manager.py  test_enhanced_supervisor.py  test_errors.py  test_log_analyzer.py  test_metrics.py  test_mongo_client.py  test_monitoring.py  test_notifier.py  test_pipeline_tools.py  test_rate_limit.py  test_webhook_listener.py  test_workflow_manager.py
(+32 files in other folders)
