[tool.poetry]
name = "jenkins-langchain-agent"
version = "0.1.0"
description = "AI-powered Jenkins management system using LangChain"
authors = ["OpenHands <openhands@all-hands.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/samschim/jenkins-agent"
documentation = "https://github.com/samschim/jenkins-agent/wiki"

[tool.poetry.dependencies]
python = "^3.8"
langchain = "^0.1.0"
openai = "^1.0.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
aiohttp = "^3.8.5"
redis = "^5.0.0"
motor = "^3.3.0"
click = "^8.1.0"
rich = "^13.5.0"
aioconsole = "^0.6.0"
prometheus-client = "^0.17.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"
pre-commit = "^3.3.0"
pytest-mock = "^3.11.0"

[tool.poetry.scripts]
jenkins-agent = "langchain_jenkins.cli.jenkins_cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=langchain_jenkins --cov-report=html"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: mark test as unit test",
    "integration: mark test as integration test",
    "agent: mark test as agent test",
]